Fixing password overflow

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ body {
 
 .pw-container {
   background-color: rgb(46, 12, 80);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 25px 1px rgba(0, 0, 0, 0.75);
   width: 400px;
 }
 
@@ -34,6 +36,7 @@ body {
   width: 100%;
   position: relative;
   padding: 1rem;
+  overflow: hidden;
 }
 
 .pw button {
